# quick-template

./: .gitignore  README.md  copier.yml  pyproject.toml  test_template.py
.github/workflows/: pages.yml  test.yml
docs/: index.html
docs/assets/: app.js  style.css
examples/: claude_agent.py
languages/golang/: .golangci.yml  go.mod
languages/python/: .env.example  pyproject.toml
languages/typescript/: biome.json  package.json
shared/: .gitignore  Makefile  README.md
shared/.claude/: CLAUDE.md
shared/.github/: dependabot.yml
shared/docs/: CHANGELOG.md  PROJECT_SUMMARY.md  QUICKSTART.md  RELEASE.md  prompt.md
src/scaffold/: __init__.py  cli.py  engine.py  files.py  variables.py
template/: .gitignore  Makefile  README.md  {% if language == 'golang' %}.golangci.yml{% endif %}  {% if language == 'golang' %}go.mod{% endif %}  {% if language == 'python' %}.pre-commit-config.yaml{% endif %}  {% if language == 'python' %}pyproject.toml{% endif %}  {% if language == 'typescript' %}package.json{% endif %}  {% if language == 'typescript' %}tsconfig.json{% endif %}
template/.claude/: CLAUDE.md
template/{% if language == 'golang' %}tests{% endif %}/: core_test.go  handler_test.go
template/{% if language == 'python' %}tests{% endif %}/: conftest.py  test_agent.py  test_api.py  test_core.py  test_main.py  test_{{package_name}}.py
template/{% if language == 'typescript' %}src{% endif %}/: index.ts  logger.ts
template/{% if language == 'typescript' %}tests{% endif %}/: api.test.ts  (+1 more)
tests/: conftest.py  test_cli.py  test_engine.py  test_files.py
(+39 files in other folders)
