[project]
name = "quick-template"
version = "0.2.0"
description = "Multi-language project scaffolding tool (Python / Go / TypeScript)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
quick-template = "scaffold.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scaffold"]

[dependency-groups]
dev = []
